CSS .pages and ALT

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </p>
         <img
           src="./images/inside_the_library.png"
-          alt="Illustration 'Inside the library'"
+          alt="Inside view of a library with a woman reading in a chair and a man sitting at a large desk on his laptop. Large window on one wall and bookcase on another."
           class="header__image"
         />
 
@@ -92,20 +92,24 @@
             <a href="#" class="events__more">More events &rarr;</a>
           </div>
           <div class="events__cover">
-            <img src="images/cafe.png" alt="cafe" class="events__image" />
+            <img
+              src="images/cafe.png"
+              alt="inside view of a cafe with the counter on the right, bookshelf on the wall left of the counter. Man is sitting at a big table on his laptop with a big window in front of him. "
+              class="events__image"
+            />
             <div class="person person_name_feynman">
               <p class="person__caption">Joan Feynman</p>
               <img
                 class="person__image person__image_size_l"
                 src="images/person_feynman.png"
-                alt="Joan Feynman"
+                alt="black and white photo of Joan Feynman"
               />
             </div>
             <div class="person person_name_tarter">
               <img
                 class="person__image person__image_size_m"
                 src="images/person_tarter.png"
-                alt="Jill Tarter"
+                alt="black and white photo of Jill Tarter"
               />
               <p class="person__caption">Jill Tarter</p>
             </div>
@@ -113,7 +117,7 @@
               <img
                 class="person__image person__image_size_s"
                 src="images/person_mitchell.png"
-                alt="Maria Mitchell"
+                alt="black and white photo of Maria Mitchell"
               />
               <p class="person__caption">Maria Mitchell</p>
             </div>
@@ -121,7 +125,7 @@
               <img
                 class="person__image person__image_size_m"
                 src="images/person_burbidge.png"
-                alt="Margaret Burbidge"
+                alt="black and white photo of Margaret Burbidge"
               />
               <p class="person__caption">Margaret Burbidge</p>
             </div>
@@ -129,7 +133,7 @@
               <img
                 class="person__image person__image_size_m"
                 src="images/person_cannon.png"
-                alt="Annie Jump Cannon"
+                alt="black and white photo of Annie Jump Cannon"
               />
               <p class="person__caption">Annie Jump Cannon</p>
             </div>
@@ -219,7 +223,7 @@
                 <img
                   src="./images/icon_step_forward.svg"
                   alt="icon forward"
-                  class="step__icon"
+                  class="arrow pointing to the right"
                 />
               </h3>
               <p class="step__description">
@@ -232,7 +236,7 @@
                 <img
                   src="./images/icon_step_forward.svg"
                   alt="icon forward"
-                  class="step__icon"
+                  class="arrow pointing to the right"
                 />
               </h3>
               <p class="step__description">
@@ -245,7 +249,7 @@
                 <img
                   src="./images/icon_step_forward.svg"
                   alt="icon forward"
-                  class="step__icon"
+                  class="arrow pointing to the right"
                 />
               </h3>
               <p class="step__description">Sign the back of the card.</p>
@@ -256,7 +260,7 @@
                 <img
                   src="./images/icon_step_finish.svg"
                   alt="icon finish"
-                  class="step__icon"
+                  class="arrow pointing to the right"
                 />
               </h3>
               <p class="step__description">
