--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
             <li>
               <a class="nav__link" href="#footer-contacts">Contacts</a>
             </li>
-            <li>
-              <a class="#header__link-about-the-libary">About the libary</a>
-            </li>
           </ul>
         </nav>
         <h1 class="header__title">Welcome to the Practicum Library</h1>
@@ -97,46 +94,46 @@
               alt="inside view of a cafe with the counter on the right, bookshelf on the wall left of the counter. Man is sitting at a big table on his laptop with a big window in front of him. "
               class="events__image"
             />
-            <div class="person person_name_feynman">
-              <p class="person__caption">Joan Feynman</p>
+            <figure class="person person_name_feynman">
+              <figcaption class="person__caption">Joan Feynman</figcaption>
               <img
                 class="person__image person__image_size_l"
                 src="images/person_feynman.png"
                 alt="black and white photo of Joan Feynman"
               />
-            </div>
-            <div class="person person_name_tarter">
+            </figure>
+            <figure class="person person_name_tarter">
+              <figcaption class="person__caption">Jill Tarter</figcaption>
               <img
                 class="person__image person__image_size_m"
                 src="images/person_tarter.png"
                 alt="black and white photo of Jill Tarter"
               />
-              <p class="person__caption">Jill Tarter</p>
-            </div>
-            <div class="person person_name_mitchell">
+            </figure>
+            <figure class="person person_name_mitchell">
               <img
                 class="person__image person__image_size_s"
                 src="images/person_mitchell.png"
                 alt="black and white photo of Maria Mitchell"
               />
-              <p class="person__caption">Maria Mitchell</p>
-            </div>
-            <div class="person person_name_burbidge">
+              <figcaption class="person__caption">Maria Mitchell</figcaption>
+            </figure>
+            <figure class="person person_name_burbidge">
+              <figcaption class="person__caption">Margaret Burbidge</figcaption>
               <img
                 class="person__image person__image_size_m"
                 src="images/person_burbidge.png"
                 alt="black and white photo of Margaret Burbidge"
               />
-              <p class="person__caption">Margaret Burbidge</p>
-            </div>
-            <div class="person person_name_cannon">
+            </figure>
+            <figure class="person person_name_cannon">
               <img
                 class="person__image person__image_size_m"
                 src="images/person_cannon.png"
                 alt="black and white photo of Annie Jump Cannon"
               />
-              <p class="person__caption">Annie Jump Cannon</p>
-            </div>
+              <figcaption class="person__caption">Annie Jump Cannon</figcaption>
+            </figure>
           </div>
         </section>
 
